[package]
name = "silverstripe-in-the-wild"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.2.2"
log = "0.4.17"
rusqlite = { version = "0.27.0", features = ["bundled"] }
tokio-rusqlite = "0.1.0"
reqwest = { version = "0.11.11", features = ["stream"]}
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.3", features = ["io"] }
futures-util = "0.3.21"
env_logger = "0.9.0"
rust_warc = "1.1.0"
flate2 = "1.0.24"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
scraper = "0.13.0"
sha2 = "0.10.2"
hex = "0.4.3"
futures = "0.3.21"